Created page with "==== Použití navigační krychle ===="

--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -246,8 +246,9 @@ N&#283;kolik slov o 3D prostoru
 <li>Zat&iacute;mco <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">V</span><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">P</span> ho nastav&iacute; na <span typeof="mw:File"><a href="../index.php?title=View-perspective.svg&amp;filetimestamp=20240704202114&amp;.html" class="mw-file-description"><img src="../File/View-perspective.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_PerspectiveCamera.html" title="Std PerspectiveCamera">Perspektivn&iacute; pohled</a>.</li>
 <li>Pomoc&iacute; kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> m&#367;&#382;ete vybrat v&iacute;ce ne&#382; jeden objekt nebo prvek.</li></ul>
 <p>Tyto ovl&aacute;dac&iacute; prvky jsou tak&eacute; k dispozici v <a href="../Std_View_Menu.html" title="Std View Menu">menu Zobrazit</a> a n&#283;kter&eacute; z nich tak&eacute; na panelu n&aacute;stroj&#367; Zobrazit.
+</p><p><span id="Using_the_Navigation_Cube"></span>
 </p>
-<h4><span class="mw-headline" id="Using_the_Navigation_Cube">Using the Navigation Cube</span></h4>
+<h4><span id="Pou.C5.BEit.C3.AD_naviga.C4.8Dn.C3.AD_krychle"></span><span class="mw-headline" id="Pou&#382;it&iacute;_naviga&#269;n&iacute;_krychle">Pou&#382;it&iacute; naviga&#269;n&iacute; krychle</span></h4>
 <p>In the default setup, there is a <a href="../Navigation_Cube.html" title="Navigation Cube">Navigation Cube</a> in the upper right corner of the 3D View. This may be used to change the view.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Cube.png&amp;filetimestamp=20240614194546&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Cube.png" decoding="async" width="1575" height="808" class="mw-file-element" data-file-width="1575" data-file-height="808"></a></span>
 </p><p>Clicking on a face of the cube will switch the view to that face. Clicking one of the four triangular arrows rotates the view 45 degrees in the indicated direction. Clicking one of the two curved arrows rotates the view 45 degrees in the indicated direction around a line pointing towards you. Clicking the round button in the top right corner of the cube rotates the view 180 degrees around the vertical axis of the view.
@@ -278,13 +279,13 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112045650
+Cached time: 20260112045709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.187 seconds
-Real time usage: 0.244 seconds
-Preprocessor visited node count: 1265/1000000
+CPU time usage: 0.177 seconds
+Real time usage: 0.252 seconds
+Preprocessor visited node count: 1266/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
@@ -294,16 +295,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.422      1 -total
- 44.23%   10.359     15 Template:ASCII
- 20.72%    4.852      1 Template:Manual:TOC
- 16.06%    3.762      1 Manual:Summary/cs
-  9.71%    2.275     34 Template:KEY
-  7.49%    1.755      2 Template:Docnav
-  5.14%    1.204      2 Template:Version
+100.00%   25.914      1 -total
+ 44.35%   11.492     15 Template:ASCII
+ 26.06%    6.754      1 Template:Manual:TOC
+ 16.89%    4.378      1 Manual:Summary/cs
+  8.00%    2.072     34 Template:KEY
+  7.93%    2.055      2 Template:Docnav
+  3.89%    1.008      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045650 and revision id 1737084. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045709 and revision id 1737086. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
