Created page with "Ve výchozím nastavení se v pravém horním rohu 3D zobrazení nachází [[Navigation_Cube|Navigační krychle]]. Tu lze použít ke změně zobrazení."

--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -249,7 +249,7 @@ N&#283;kolik slov o 3D prostoru
 </p><p><span id="Using_the_Navigation_Cube"></span>
 </p>
 <h4><span id="Pou.C5.BEit.C3.AD_naviga.C4.8Dn.C3.AD_krychle"></span><span class="mw-headline" id="Pou&#382;it&iacute;_naviga&#269;n&iacute;_krychle">Pou&#382;it&iacute; naviga&#269;n&iacute; krychle</span></h4>
-<p>In the default setup, there is a <a href="../Navigation_Cube.html" title="Navigation Cube">Navigation Cube</a> in the upper right corner of the 3D View. This may be used to change the view.
+<p>Ve v&yacute;choz&iacute;m nastaven&iacute; se v prav&eacute;m horn&iacute;m rohu 3D zobrazen&iacute; nach&aacute;z&iacute; <a href="../Navigation_Cube.html" title="Navigation Cube">Naviga&#269;n&iacute; krychle</a>. Tu lze pou&#382;&iacute;t ke zm&#283;n&#283; zobrazen&iacute;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Cube.png&amp;filetimestamp=20240614194546&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Cube.png" decoding="async" width="1575" height="808" class="mw-file-element" data-file-width="1575" data-file-height="808"></a></span>
 </p><p>Clicking on a face of the cube will switch the view to that face. Clicking one of the four triangular arrows rotates the view 45 degrees in the indicated direction. Clicking one of the two curved arrows rotates the view 45 degrees in the indicated direction around a line pointing towards you. Clicking the round button in the top right corner of the cube rotates the view 180 degrees around the vertical axis of the view.
 </p><p>There is a smaller mini-cube in the lower right of the Navigation Cube which activates a drop-down menu with several options, including an option to make the cube movable, which allows to temporarily move the cube to a different position by dragging.
@@ -279,12 +279,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112045709
+Cached time: 20260112045811
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.252 seconds
+CPU time usage: 0.165 seconds
+Real time usage: 0.251 seconds
 Preprocessor visited node count: 1266/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -295,16 +295,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.914      1 -total
- 44.35%   11.492     15 Template:ASCII
- 26.06%    6.754      1 Template:Manual:TOC
- 16.89%    4.378      1 Manual:Summary/cs
-  8.00%    2.072     34 Template:KEY
-  7.93%    2.055      2 Template:Docnav
-  3.89%    1.008      2 Template:Version
+100.00%   30.311      1 -total
+ 38.01%   11.521     15 Template:ASCII
+ 22.49%    6.818      1 Template:Manual:TOC
+ 16.56%    5.019      1 Manual:Summary/cs
+  9.79%    2.967     34 Template:KEY
+  7.33%    2.222      2 Template:Version
+  7.22%    2.187      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045709 and revision id 1737086. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045811 and revision id 1737088. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
