Created page with "Kliknutím na jednu ze stran krychle přepnete zobrazení na tuto stranu. Kliknutím na jednu ze čtyř trojúhelníkových šipek otočíte zobrazení o 45 stupňů v uvedeném směru. Kliknutím na jednu ze dvou zakřivených šipek otočíte zobrazení o 45 stupňů v uvedeném směru kolem linie směřující k vám. Kliknutím na kulaté tlačítko v pravém horním rohu krychle otočíte zobrazení o 180 stupňů kolem svislé osy zobrazení."

--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Nawigacja w oknie widoku 3D (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--high" title="Manual: Navegando na visualiza&ccedil;&atilde;o 3D (93% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Navigare &icirc;n vizualizarea 3D (26% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; &#1086;&#1082;&#1085;&#1077; 3D &#1074;&#1080;&#1076;&#1072; (93% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#22312; 3D &#35270;&#22270;&#20013;&#23548;&#33322; (33% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;3D &#12499;&#12517;&#12540;&#12398;&#25805;&#20316; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -251,7 +251,7 @@ N&#283;kolik slov o 3D prostoru
 <h4><span id="Pou.C5.BEit.C3.AD_naviga.C4.8Dn.C3.AD_krychle"></span><span class="mw-headline" id="Pou&#382;it&iacute;_naviga&#269;n&iacute;_krychle">Pou&#382;it&iacute; naviga&#269;n&iacute; krychle</span></h4>
 <p>Ve v&yacute;choz&iacute;m nastaven&iacute; se v prav&eacute;m horn&iacute;m rohu 3D zobrazen&iacute; nach&aacute;z&iacute; <a href="../Navigation_Cube.html" title="Navigation Cube">Naviga&#269;n&iacute; krychle</a>. Tu lze pou&#382;&iacute;t ke zm&#283;n&#283; zobrazen&iacute;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Cube.png&amp;filetimestamp=20240614194546&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Cube.png" decoding="async" width="1575" height="808" class="mw-file-element" data-file-width="1575" data-file-height="808"></a></span>
-</p><p>Clicking on a face of the cube will switch the view to that face. Clicking one of the four triangular arrows rotates the view 45 degrees in the indicated direction. Clicking one of the two curved arrows rotates the view 45 degrees in the indicated direction around a line pointing towards you. Clicking the round button in the top right corner of the cube rotates the view 180 degrees around the vertical axis of the view.
+</p><p>Kliknut&iacute;m na jednu ze stran krychle p&#345;epnete zobrazen&iacute; na tuto stranu. Kliknut&iacute;m na jednu ze &#269;ty&#345; troj&uacute;heln&iacute;kov&yacute;ch &scaron;ipek oto&#269;&iacute;te zobrazen&iacute; o 45 stup&#328;&#367; v uveden&eacute;m sm&#283;ru. Kliknut&iacute;m na jednu ze dvou zak&#345;iven&yacute;ch &scaron;ipek oto&#269;&iacute;te zobrazen&iacute; o 45 stup&#328;&#367; v uveden&eacute;m sm&#283;ru kolem linie sm&#283;&#345;uj&iacute;c&iacute; k v&aacute;m. Kliknut&iacute;m na kulat&eacute; tla&#269;&iacute;tko v prav&eacute;m horn&iacute;m rohu krychle oto&#269;&iacute;te zobrazen&iacute; o 180 stup&#328;&#367; kolem svisl&eacute; osy zobrazen&iacute;.
 </p><p>There is a smaller mini-cube in the lower right of the Navigation Cube which activates a drop-down menu with several options, including an option to make the cube movable, which allows to temporarily move the cube to a different position by dragging.
 </p>
 <h3><span class="mw-headline" id="Selecting_objects">Selecting objects</span></h3>
@@ -279,32 +279,32 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112045811
+Cached time: 20260112045831
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.165 seconds
-Real time usage: 0.251 seconds
+CPU time usage: 0.176 seconds
+Real time usage: 0.232 seconds
 Preprocessor visited node count: 1266/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2958/5000000 bytes
+Unstrip post&#8208;expand size: 2959/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.311      1 -total
- 38.01%   11.521     15 Template:ASCII
- 22.49%    6.818      1 Template:Manual:TOC
- 16.56%    5.019      1 Manual:Summary/cs
-  9.79%    2.967     34 Template:KEY
-  7.33%    2.222      2 Template:Version
-  7.22%    2.187      2 Template:Docnav
+100.00%   26.894      1 -total
+ 41.17%   11.071     15 Template:ASCII
+ 21.76%    5.853      1 Template:Manual:TOC
+ 14.58%    3.921      1 Manual:Summary/cs
+ 10.37%    2.788     34 Template:KEY
+  9.55%    2.569      2 Template:Docnav
+  5.03%    1.352      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045811 and revision id 1737088. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045830 and revision id 1737090. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
