--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -252,7 +252,7 @@ N&#283;kolik slov o 3D prostoru
 <p>Ve v&yacute;choz&iacute;m nastaven&iacute; se v prav&eacute;m horn&iacute;m rohu 3D zobrazen&iacute; nach&aacute;z&iacute; <a href="../Navigation_Cube.html" title="Navigation Cube">Naviga&#269;n&iacute; krychle</a>. Tu lze pou&#382;&iacute;t ke zm&#283;n&#283; zobrazen&iacute;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Cube.png&amp;filetimestamp=20240614194546&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Cube.png" decoding="async" width="1575" height="808" class="mw-file-element" data-file-width="1575" data-file-height="808"></a></span>
 </p><p>Kliknut&iacute;m na jednu ze stran krychle p&#345;epnete zobrazen&iacute; na tuto stranu. Kliknut&iacute;m na jednu ze &#269;ty&#345; troj&uacute;heln&iacute;kov&yacute;ch &scaron;ipek oto&#269;&iacute;te zobrazen&iacute; o 45 stup&#328;&#367; v uveden&eacute;m sm&#283;ru. Kliknut&iacute;m na jednu ze dvou zak&#345;iven&yacute;ch &scaron;ipek oto&#269;&iacute;te zobrazen&iacute; o 45 stup&#328;&#367; v uveden&eacute;m sm&#283;ru kolem linie sm&#283;&#345;uj&iacute;c&iacute; k v&aacute;m. Kliknut&iacute;m na kulat&eacute; tla&#269;&iacute;tko v prav&eacute;m horn&iacute;m rohu krychle oto&#269;&iacute;te zobrazen&iacute; o 180 stup&#328;&#367; kolem svisl&eacute; osy zobrazen&iacute;.
-</p><p>There is a smaller mini-cube in the lower right of the Navigation Cube which activates a drop-down menu with several options, including an option to make the cube movable, which allows to temporarily move the cube to a different position by dragging.
+</p><p>V prav&eacute;m doln&iacute;m rohu naviga&#269;n&iacute; krychle se nach&aacute;z&iacute; men&scaron;&iacute; mini-krychle, kter&aacute; aktivuje rozbalovac&iacute; menu s n&#283;kolika mo&#382;nostmi, v&#269;etn&#283; mo&#382;nosti p&#345;esunout krychli, co&#382; umo&#382;&#328;uje do&#269;asn&#283; p&#345;esunout krychli na jin&eacute; m&iacute;sto ta&#382;en&iacute;m.
 </p>
 <h3><span class="mw-headline" id="Selecting_objects">Selecting objects</span></h3>
 <p>Objects in the 3D View can be selected by clicking them with the corresponding mouse button, depending on the navigation style (described above).
@@ -279,12 +279,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112045831
+Cached time: 20260112045843
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.176 seconds
-Real time usage: 0.232 seconds
+CPU time usage: 0.192 seconds
+Real time usage: 0.272 seconds
 Preprocessor visited node count: 1266/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -295,16 +295,16 @@ Unstrip post&#8208;expand size: 2959/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.894      1 -total
- 41.17%   11.071     15 Template:ASCII
- 21.76%    5.853      1 Template:Manual:TOC
- 14.58%    3.921      1 Manual:Summary/cs
- 10.37%    2.788     34 Template:KEY
-  9.55%    2.569      2 Template:Docnav
-  5.03%    1.352      2 Template:Version
+100.00%   27.310      1 -total
+ 40.52%   11.065     15 Template:ASCII
+ 20.91%    5.710      1 Template:Manual:TOC
+ 16.91%    4.619      1 Manual:Summary/cs
+ 11.55%    3.155     34 Template:KEY
+  7.74%    2.113      2 Template:Version
+  7.02%    1.918      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045830 and revision id 1737090. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045843 and revision id 1737092. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
