--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -253,8 +253,9 @@ N&#283;kolik slov o 3D prostoru
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Cube.png&amp;filetimestamp=20240614194546&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Cube.png" decoding="async" width="1575" height="808" class="mw-file-element" data-file-width="1575" data-file-height="808"></a></span>
 </p><p>Kliknut&iacute;m na jednu ze stran krychle p&#345;epnete zobrazen&iacute; na tuto stranu. Kliknut&iacute;m na jednu ze &#269;ty&#345; troj&uacute;heln&iacute;kov&yacute;ch &scaron;ipek oto&#269;&iacute;te zobrazen&iacute; o 45 stup&#328;&#367; v uveden&eacute;m sm&#283;ru. Kliknut&iacute;m na jednu ze dvou zak&#345;iven&yacute;ch &scaron;ipek oto&#269;&iacute;te zobrazen&iacute; o 45 stup&#328;&#367; v uveden&eacute;m sm&#283;ru kolem linie sm&#283;&#345;uj&iacute;c&iacute; k v&aacute;m. Kliknut&iacute;m na kulat&eacute; tla&#269;&iacute;tko v prav&eacute;m horn&iacute;m rohu krychle oto&#269;&iacute;te zobrazen&iacute; o 180 stup&#328;&#367; kolem svisl&eacute; osy zobrazen&iacute;.
 </p><p>V prav&eacute;m doln&iacute;m rohu naviga&#269;n&iacute; krychle se nach&aacute;z&iacute; men&scaron;&iacute; mini-krychle, kter&aacute; aktivuje rozbalovac&iacute; menu s n&#283;kolika mo&#382;nostmi, v&#269;etn&#283; mo&#382;nosti p&#345;esunout krychli, co&#382; umo&#382;&#328;uje do&#269;asn&#283; p&#345;esunout krychli na jin&eacute; m&iacute;sto ta&#382;en&iacute;m.
+</p><p><span id="Selecting_objects"></span>
 </p>
-<h3><span class="mw-headline" id="Selecting_objects">Selecting objects</span></h3>
+<h3><span id="V.C3.BDb.C4.9Br_objekt.C5.AF"></span><span class="mw-headline" id="V&yacute;b&#283;r_objekt&#367;">V&yacute;b&#283;r objekt&#367;</span></h3>
 <p>Objects in the 3D View can be selected by clicking them with the corresponding mouse button, depending on the navigation style (described above).
 </p>
 <ul><li>A single click will select the object and one of its subelements (edge, face, vertex).</li>
@@ -279,13 +280,13 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112045843
+Cached time: 20260112045908
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.192 seconds
-Real time usage: 0.272 seconds
-Preprocessor visited node count: 1266/1000000
+CPU time usage: 0.158 seconds
+Real time usage: 0.212 seconds
+Preprocessor visited node count: 1267/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
@@ -295,16 +296,16 @@ Unstrip post&#8208;expand size: 2959/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.310      1 -total
- 40.52%   11.065     15 Template:ASCII
- 20.91%    5.710      1 Template:Manual:TOC
- 16.91%    4.619      1 Manual:Summary/cs
- 11.55%    3.155     34 Template:KEY
-  7.74%    2.113      2 Template:Version
-  7.02%    1.918      2 Template:Docnav
+100.00%   24.603      1 -total
+ 41.12%   10.117     15 Template:ASCII
+ 29.35%    7.220      1 Template:Manual:TOC
+ 19.79%    4.869      1 Manual:Summary/cs
+  7.60%    1.870      2 Template:Docnav
+  7.37%    1.813     34 Template:KEY
+  4.37%    1.076      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045843 and revision id 1737092. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045908 and revision id 1737094. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
