--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -256,7 +256,7 @@ N&#283;kolik slov o 3D prostoru
 </p><p><span id="Selecting_objects"></span>
 </p>
 <h3><span id="V.C3.BDb.C4.9Br_objekt.C5.AF"></span><span class="mw-headline" id="V&yacute;b&#283;r_objekt&#367;">V&yacute;b&#283;r objekt&#367;</span></h3>
-<p>Objects in the 3D View can be selected by clicking them with the corresponding mouse button, depending on the navigation style (described above).
+<p>Objekty ve 3D zobrazen&iacute; lze vybrat kliknut&iacute;m p&#345;&iacute;slu&scaron;n&yacute;m tla&#269;&iacute;tkem my&scaron;i, v z&aacute;vislosti na stylu navigace (popisovan&eacute;m v&yacute;&scaron;e).
 </p>
 <ul><li>A single click will select the object and one of its subelements (edge, face, vertex).</li>
 <li>Double-clicking will select the object and all its subelements.</li>
@@ -280,12 +280,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112045908
+Cached time: 20260112050031
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.158 seconds
-Real time usage: 0.212 seconds
+CPU time usage: 0.225 seconds
+Real time usage: 0.316 seconds
 Preprocessor visited node count: 1267/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -296,16 +296,16 @@ Unstrip post&#8208;expand size: 2959/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.603      1 -total
- 41.12%   10.117     15 Template:ASCII
- 29.35%    7.220      1 Template:Manual:TOC
- 19.79%    4.869      1 Manual:Summary/cs
-  7.60%    1.870      2 Template:Docnav
-  7.37%    1.813     34 Template:KEY
-  4.37%    1.076      2 Template:Version
+100.00%   42.955      1 -total
+ 39.77%   17.084     15 Template:ASCII
+ 27.61%   11.858      1 Template:Manual:TOC
+ 18.64%    8.006      1 Manual:Summary/cs
+  9.21%    3.956     34 Template:KEY
+  7.38%    3.170      2 Template:Docnav
+  5.08%    2.183      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112045908 and revision id 1737094. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112050030 and revision id 1737096. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
