--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -262,7 +262,7 @@ N&#283;kolik slov o 3D prostoru
 <li>Dvojit&yacute;m kliknut&iacute;m vyberete objekt a v&scaron;echny jeho podprvky.</li>
 <li>Stisknut&iacute;m kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">CTRL</span> m&#367;&#382;ete vybrat v&iacute;ce ne&#382; jeden objekt a v&iacute;ce ne&#382; jeden podprvek ze stejn&yacute;ch nebo r&#367;zn&yacute;ch objekt&#367;.</li>
 <li>Kliknut&iacute;m tla&#269;&iacute;tkem v&yacute;b&#283;ru na pr&aacute;zdnou &#269;&aacute;st 3D pohledu zru&scaron;&iacute;te v&yacute;b&#283;r v&scaron;eho.</li></ul>
-<p>A panel called <a href="../Selection_View.html" title="Selection View">Selection View</a>, available from the View menu, can also be turned on, which shows you what is currently selected:
+<p>Panel s n&aacute;zvem <a href="../Selection_View.html" title="Selection View">Zobrazen&iacute; v&yacute;b&#283;ru</a>, kter&yacute; je k dispozici v menu Zobrazen&iacute;, lze tak&eacute; zapnout. Ukazuje, co je aktu&aacute;ln&#283; vybr&aacute;no:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Selection_view.jpg&amp;filetimestamp=20151213194612&amp;.html" class="mw-file-description"><img src="../File/Selection_view.jpg" decoding="async" width="583" height="185" class="mw-file-element" data-file-width="583" data-file-height="185"></a></span>
 </p><p>You can also use the Selection View to select objects by searching for a particular object.
 </p><p><b>Read more</b>
@@ -280,12 +280,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112050202
+Cached time: 20260112050256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.189 seconds
-Real time usage: 0.266 seconds
+CPU time usage: 0.180 seconds
+Real time usage: 0.240 seconds
 Preprocessor visited node count: 1267/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -296,16 +296,16 @@ Unstrip post&#8208;expand size: 2959/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.351      1 -total
- 40.58%   14.752     15 Template:ASCII
- 24.89%    9.047      1 Template:Manual:TOC
- 15.32%    5.570      1 Manual:Summary/cs
-  9.20%    3.345      2 Template:Docnav
-  8.51%    3.092     34 Template:KEY
-  4.83%    1.756      2 Template:Version
+100.00%   29.845      1 -total
+ 41.06%   12.255     15 Template:ASCII
+ 27.99%    8.354      1 Template:Manual:TOC
+ 20.56%    6.136      1 Manual:Summary/cs
+  8.43%    2.515     34 Template:KEY
+  6.93%    2.068      2 Template:Docnav
+  6.80%    2.029      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112050202 and revision id 1737098. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112050256 and revision id 1737100. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
