--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -267,8 +267,8 @@ N&#283;kolik slov o 3D prostoru
 </p><p>K v&yacute;b&#283;ru objekt&#367; m&#367;&#382;ete tak&eacute; pou&#382;&iacute;t zobrazen&iacute; v&yacute;b&#283;ru a vyhledat konkr&eacute;tn&iacute; objekt.
 </p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<ul><li><a href="../Mouse_navigation.html" title="Mouse navigation">FreeCAD navigation styles</a></li>
-<li><a href="../Navigation_Cube.html" title="Navigation Cube">Navigation Cube</a></li></ul>
+<ul><li><a href="../Mouse_navigation.html" title="Mouse navigation">Styly navigace ve FreeCADu</a></li>
+<li><a href="../Navigation_Cube.html" title="Navigation Cube">Naviga&#269;n&iacute; krychle</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -280,12 +280,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112050424
+Cached time: 20260112050503
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.164 seconds
-Real time usage: 0.196 seconds
+CPU time usage: 0.191 seconds
+Real time usage: 0.253 seconds
 Preprocessor visited node count: 1267/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -296,16 +296,16 @@ Unstrip post&#8208;expand size: 2959/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.819      1 -total
- 48.73%   11.606     15 Template:ASCII
- 20.43%    4.867      1 Template:Manual:TOC
- 14.77%    3.518      1 Manual:Summary/cs
-  7.91%    1.884     34 Template:KEY
-  6.88%    1.640      2 Template:Docnav
-  4.55%    1.083      2 Template:Version
+100.00%   27.084      1 -total
+ 39.49%   10.694     15 Template:ASCII
+ 26.57%    7.196      1 Template:Manual:TOC
+ 19.11%    5.176      1 Manual:Summary/cs
+  9.85%    2.666     34 Template:KEY
+  7.89%    2.137      2 Template:Docnav
+  4.82%    1.305      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112050424 and revision id 1737104. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112050503 and revision id 1737106. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
