--- a/wiki/cs/Manual;The_FreeCAD_document.html
+++ b/wiki/cs/Manual;The_FreeCAD_document.html
@@ -6,14 +6,14 @@
 <li><a href="../it/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: I documenti di FreeCAD (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Struktura dokumentu FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--med" title="Manual: documentul FreeCAD (33% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1044;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; FreeCAD (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--med" title="Manual: FreeCAD &#25991;&#26723;&#25163;&#20876; (56% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12398;&#12501;&#12449;&#12452;&#12523;&#24418;&#24335; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436; : FreeCAD &#47928;&#49436; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Navigating_in_the_3D_view.html" class="mw-redirect" title="Manual:Navigating in the 3D view">Navigating in the 3D view</a></div>
-    <div><a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametric objects</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Navigating_in_the_3D_view.html" class="mw-redirect" title="Manual:Navigating in the 3D view">Navigace ve 3D zobrazen&iacute;</a></div>
+    <div><a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametrick&eacute; objekty</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -87,15 +87,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112050614
+Cached time: 20260112050723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.066 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.058 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 79/1000000
-Post&#8208;expand include size: 8256/2097152 bytes
-Template argument size: 692/2097152 bytes
+Post&#8208;expand include size: 8265/2097152 bytes
+Template argument size: 698/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -103,13 +103,13 @@ Unstrip post&#8208;expand size: 2638/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.640      1 -total
- 75.21%    9.506      1 Template:Manual:TOC
- 52.31%    6.612      1 Manual:Summary/cs
- 21.79%    2.754      2 Template:Docnav
+100.00%   11.682      1 -total
+ 70.80%    8.271      1 Template:Manual:TOC
+ 54.62%    6.381      1 Manual:Summary/cs
+ 25.81%    3.015      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112050614 and revision id 1737108. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112050722 and revision id 1737110. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
