--- a/wiki/cs/Manual;The_FreeCAD_document.html
+++ b/wiki/cs/Manual;The_FreeCAD_document.html
@@ -79,23 +79,23 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Navigating_in_the_3D_view.html" class="mw-redirect" title="Manual:Navigating in the 3D view">Navigating in the 3D view</a></div>
-    <div><a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametric objects</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Navigating_in_the_3D_view.html" class="mw-redirect" title="Manual:Navigating in the 3D view">Navigace ve 3D zobrazen&iacute;</a></div>
+    <div><a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametrick&eacute; objekty</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112050723
+Cached time: 20260112050737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.058 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.073 seconds
 Preprocessor visited node count: 79/1000000
-Post&#8208;expand include size: 8265/2097152 bytes
-Template argument size: 698/2097152 bytes
+Post&#8208;expand include size: 8274/2097152 bytes
+Template argument size: 704/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -103,13 +103,13 @@ Unstrip post&#8208;expand size: 2638/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.682      1 -total
- 70.80%    8.271      1 Template:Manual:TOC
- 54.62%    6.381      1 Manual:Summary/cs
- 25.81%    3.015      2 Template:Docnav
+100.00%    6.826      1 -total
+ 71.22%    4.862      1 Template:Manual:TOC
+ 55.67%    3.800      1 Manual:Summary/cs
+ 24.98%    1.705      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112050722 and revision id 1737110. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112050737 and revision id 1737112. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
