Created page with "Objekty v dokumentu FreeCADu se liší podle typu, protože každá pracovní plocha zavádí svůj vlastní druh objektů. Například pracovní plocha [[Mesh_Workbench|Mesh Workbench]] je známá přidáváním objektů typu mesh, zatímco pracovní plocha [[Part_Workbench|Part Workbench]] poskytuje objekty typu Part. V každé relaci FreeCADu, pokud je otevřen alespoň jeden dokument, je tento dokument považován za aktivní a je zobrazen v aktuálním 3D zobrazení..."

--- a/wiki/cs/Manual;The_FreeCAD_document.html
+++ b/wiki/cs/Manual;The_FreeCAD_document.html
@@ -69,7 +69,7 @@
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>Dokument FreeCAD tvo&#345;&iacute; j&aacute;dro va&scaron;eho n&aacute;vrhov&eacute;ho prost&#345;ed&iacute; a zahrnuje v&scaron;echny objekty a prvky, kter&eacute; tvo&#345;&iacute; va&scaron;i sc&eacute;nu. M&#367;&#382;e obsahovat &#345;adu objekt&#367; vytvo&#345;en&yacute;ch v r&#367;zn&yacute;ch pracovn&iacute;ch prostorech, co&#382; umo&#382;&#328;uje hladkou integraci a flexibilitu, proto&#382;e m&#367;&#382;ete p&#345;ep&iacute;nat mezi pracovn&iacute;mi prostory p&#345;i pr&aacute;ci v r&aacute;mci stejn&eacute;ho dokumentu. Dokument je v podstat&#283; soubor, kter&yacute; ukl&aacute;d&aacute;te na disk a kter&yacute; obsahuje ve&scaron;kerou va&scaron;i pr&aacute;ci. FreeCAD v&aacute;m umo&#382;&#328;uje otev&#345;&iacute;t v&iacute;ce dokument&#367; sou&#269;asn&#283; a zobrazit v&iacute;ce pohled&#367; na stejn&yacute; dokument.
 </p><p>V dokumentu m&#367;&#382;ete objekty organizovat do skupin, z nich&#382; ka&#382;d&aacute; m&aacute; jedine&#269;n&yacute; n&aacute;zev pro snadnou identifikaci a spr&aacute;vu. Spr&aacute;va skupin, objekt&#367; a jejich n&aacute;zv&#367; se prov&aacute;d&iacute; hlavn&#283; v zobrazen&iacute; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute; struktury</a>. V dokumentu m&#367;&#382;ete objekty organizovat do skupin, z nich&#382; ka&#382;d&aacute; m&aacute; jedine&#269;n&yacute; n&aacute;zev pro snadnou identifikaci a spr&aacute;vu. Spr&aacute;va skupin, objekt&#367; a jejich n&aacute;zv&#367; se prov&aacute;d&iacute; hlavn&#283; v zobrazen&iacute; stromov&eacute; struktury. Zde mohou u&#382;ivatel&eacute; vytv&aacute;&#345;et nov&eacute; skupiny, p&#345;i&#345;azovat k nim objekty a prov&aacute;d&#283;t maz&aacute;n&iacute;. Podrobn&#283;j&scaron;&iacute; p&#345;izp&#367;soben&iacute;, jako je p&#345;ejmenov&aacute;n&iacute; objekt&#367;, zm&#283;na jejich vizu&aacute;ln&iacute;ch vlastnost&iacute;, jako je barva, nebo &uacute;prava viditelnosti, lze prov&eacute;st kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt nebo skupinu ve stromov&eacute;m zobrazen&iacute;. V z&aacute;vislosti na aktivn&iacute;m pracovn&iacute;m prost&#345;ed&iacute; mohou b&yacute;t k dispozici tak&eacute; dal&scaron;&iacute; funkce.
-</p><p>Objects in a FreeCAD document vary widely in type, as each workbench introduces its unique kind of objects. For example, the <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> is known for adding mesh objects, while the <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> provides Part objects. In any FreeCAD session, if at least one document is open, that document is considered active and is displayed in the current 3D view. This is the document you are actively modifying. Switching tabs to another document makes the newly selected tab the active document, and most operations will be applied to it.
+</p><p>Objekty v dokumentu FreeCADu se li&scaron;&iacute; podle typu, proto&#382;e ka&#382;d&aacute; pracovn&iacute; plocha zav&aacute;d&iacute; sv&#367;j vlastn&iacute; druh objekt&#367;. Nap&#345;&iacute;klad pracovn&iacute; plocha <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> je zn&aacute;m&aacute; p&#345;id&aacute;v&aacute;n&iacute;m objekt&#367; typu mesh, zat&iacute;mco pracovn&iacute; plocha <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> poskytuje objekty typu Part. V ka&#382;d&eacute; relaci FreeCADu, pokud je otev&#345;en alespo&#328; jeden dokument, je tento dokument pova&#382;ov&aacute;n za aktivn&iacute; a je zobrazen v aktu&aacute;ln&iacute;m 3D zobrazen&iacute;. Jedn&aacute; se o dokument, kter&yacute; aktivn&#283; upravujete. P&#345;epnut&iacute;m na jinou kartu se nov&#283; vybran&aacute; karta stane aktivn&iacute;m dokumentem a v&#283;t&scaron;ina operac&iacute; se bude vztahovat na ni.
 </p><p>FreeCAD documents are saved in the .FCStd file format, which utilizes a zip-based compound structure akin to formats used by software like LibreOffice. If technical issues arise, the document can often be unzipped, allowing direct access to its contents for troubleshooting or data recovery purposes. This capability provides an additional safety net, ensuring that your design work can be preserved and recovered even under unexpected circumstances.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Document.png&amp;filetimestamp=20240614225907&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Document.png" decoding="async" width="1897" height="1078" class="mw-file-element" data-file-width="1897" data-file-height="1078"></a></span>
 </p><p><b>Read more</b>
@@ -87,12 +87,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112050854
+Cached time: 20260112050959
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.052 seconds
-Real time usage: 0.080 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.079 seconds
 Preprocessor visited node count: 79/1000000
 Post&#8208;expand include size: 8274/2097152 bytes
 Template argument size: 704/2097152 bytes
@@ -103,13 +103,13 @@ Unstrip post&#8208;expand size: 2638/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.014      1 -total
- 74.67%    6.731      1 Template:Manual:TOC
- 54.70%    4.931      1 Manual:Summary/cs
- 21.99%    1.982      2 Template:Docnav
+100.00%    8.350      1 -total
+ 69.05%    5.766      1 Template:Manual:TOC
+ 52.27%    4.365      1 Manual:Summary/cs
+ 27.18%    2.270      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112050854 and revision id 1737116. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112050959 and revision id 1737118. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
