Created page with "'''Další informace:'''"

--- a/wiki/cs/Manual;The_FreeCAD_document.html
+++ b/wiki/cs/Manual;The_FreeCAD_document.html
@@ -72,7 +72,7 @@
 </p><p>Objekty v dokumentu FreeCADu se li&scaron;&iacute; podle typu, proto&#382;e ka&#382;d&aacute; pracovn&iacute; plocha zav&aacute;d&iacute; sv&#367;j vlastn&iacute; druh objekt&#367;. Nap&#345;&iacute;klad pracovn&iacute; plocha <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> je zn&aacute;m&aacute; p&#345;id&aacute;v&aacute;n&iacute;m objekt&#367; typu mesh, zat&iacute;mco pracovn&iacute; plocha <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> poskytuje objekty typu Part. V ka&#382;d&eacute; relaci FreeCADu, pokud je otev&#345;en alespo&#328; jeden dokument, je tento dokument pova&#382;ov&aacute;n za aktivn&iacute; a je zobrazen v aktu&aacute;ln&iacute;m 3D zobrazen&iacute;. Jedn&aacute; se o dokument, kter&yacute; aktivn&#283; upravujete. P&#345;epnut&iacute;m na jinou kartu se nov&#283; vybran&aacute; karta stane aktivn&iacute;m dokumentem a v&#283;t&scaron;ina operac&iacute; se bude vztahovat na ni.
 </p><p>Dokumenty FreeCADu se ukl&aacute;daj&iacute; ve form&aacute;tu .FCStd, kter&yacute; vyu&#382;&iacute;v&aacute; slo&#382;enou strukturu zalo&#382;enou na zipu, podobnou form&aacute;t&#367;m pou&#382;&iacute;van&yacute;m softwarem jako LibreOffice. Pokud nastanou technick&eacute; probl&eacute;my, dokument lze &#269;asto rozbalit, co&#382; umo&#382;&#328;uje p&#345;&iacute;m&yacute; p&#345;&iacute;stup k jeho obsahu za &uacute;&#269;elem &#345;e&scaron;en&iacute; probl&eacute;m&#367; nebo obnoven&iacute; dat. Tato funkce poskytuje dal&scaron;&iacute; bezpe&#269;nostn&iacute; s&iacute;&#357;, kter&aacute; zaji&scaron;&#357;uje, &#382;e va&scaron;e n&aacute;vrh&aacute;&#345;sk&aacute; pr&aacute;ce m&#367;&#382;e b&yacute;t zachov&aacute;na a obnovena i za neo&#269;ek&aacute;van&yacute;ch okolnost&iacute;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Document.png&amp;filetimestamp=20240614225907&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Document.png" decoding="async" width="1897" height="1078" class="mw-file-element" data-file-width="1897" data-file-height="1078"></a></span>
-</p><p><b>Read more</b>
+</p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Document_structure.html" title="Document structure">The FreeCAD document</a></li>
 <li><a href="../File_Format_FCStd.html" title="File Format FCStd">File Format FCStd</a></li></ul>
@@ -87,12 +87,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051014
+Cached time: 20260112051036
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.052 seconds
-Real time usage: 0.079 seconds
+CPU time usage: 0.047 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 79/1000000
 Post&#8208;expand include size: 8274/2097152 bytes
 Template argument size: 704/2097152 bytes
@@ -103,13 +103,13 @@ Unstrip post&#8208;expand size: 2639/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.858      1 -total
- 72.86%    5.725      1 Template:Manual:TOC
- 54.90%    4.314      1 Manual:Summary/cs
- 24.17%    1.899      2 Template:Docnav
+100.00%    7.109      1 -total
+ 72.82%    5.177      1 Template:Manual:TOC
+ 56.34%    4.005      1 Manual:Summary/cs
+ 23.83%    1.694      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112051014 and revision id 1737120. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112051036 and revision id 1737122. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
