Created page with "Ve FreeCADu jsou parametrické objekty v podstatě malé programovatelné skripty, které se spustí při změně jakéhokoli parametru. Tyto parametry se mohou značně lišit, včetně celých čísel a čísel s plovoucí desetinnou čárkou, reálných rozměrových hodnot, jako jsou milimetry, metry nebo stopy, souřadnic (vyjádřených jako x, y, z), textových řetězců nebo dokonce odkazů na jiné objekty. Taková univerzálnost parametrů umožňuje vytváře..."

--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -68,7 +68,7 @@
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>FreeCAD vyu&#382;&iacute;v&aacute; parametrick&yacute; p&#345;&iacute;stup k modelov&aacute;n&iacute;, kdy geometrie objekt&#367; nen&iacute; voln&#283; tvarov&aacute;na, ale &#345;&iacute;d&iacute; se z&aacute;kladn&iacute;mi pravidly a parametry. To znamen&aacute;, &#382;e rozm&#283;ry a vlastnosti ka&#382;d&eacute; sou&#269;&aacute;sti jsou definov&aacute;ny parametry, kter&eacute; programu ud&aacute;vaj&iacute;, jak m&aacute; geometrii generovat. Nap&#345;&iacute;klad pro vytvo&#345;en&iacute; v&aacute;lce se zad&aacute;vaj&iacute; parametry jako polom&#283;r a v&yacute;&scaron;ka. Na z&aacute;klad&#283; t&#283;chto hodnot FreeCAD vygeneruje p&#345;esn&yacute; geometrick&yacute; tvar.
-</p><p>In FreeCAD, parametric objects are essentially small, programmable scripts that execute when any parameter is altered. These parameters can vary widely, including integers and floating-point numbers, real-world dimensional values such as millimeters, meters, or feet, coordinates (expressed as x, y, z), text strings, or even references to other objects. Such versatility in parameters allows the creation of complex models through a series of chained operations where each new object derives its characteristics from a previous one, while also introducing additional attributes.
+</p><p>Ve FreeCADu jsou parametrick&eacute; objekty v podstat&#283; mal&eacute; programovateln&eacute; skripty, kter&eacute; se spust&iacute; p&#345;i zm&#283;n&#283; jak&eacute;hokoli parametru. Tyto parametry se mohou zna&#269;n&#283; li&scaron;it, v&#269;etn&#283; cel&yacute;ch &#269;&iacute;sel a &#269;&iacute;sel s plovouc&iacute; desetinnou &#269;&aacute;rkou, re&aacute;ln&yacute;ch rozm&#283;rov&yacute;ch hodnot, jako jsou milimetry, metry nebo stopy, sou&#345;adnic (vyj&aacute;d&#345;en&yacute;ch jako x, y, z), textov&yacute;ch &#345;et&#283;zc&#367; nebo dokonce odkaz&#367; na jin&eacute; objekty. Takov&aacute; univerz&aacute;lnost parametr&#367; umo&#382;&#328;uje vytv&aacute;&#345;en&iacute; slo&#382;it&yacute;ch model&#367; prost&#345;ednictv&iacute;m &#345;ady &#345;et&#283;zen&yacute;ch operac&iacute;, kde ka&#382;d&yacute; nov&yacute; objekt odvozuje sv&eacute; vlastnosti od p&#345;edchoz&iacute;ho, p&#345;i&#269;em&#382; z&aacute;rove&#328; zav&aacute;d&iacute; dal&scaron;&iacute; atributy.
 </p><p>For example, consider creating a solid cubic object through parametric modeling. You start with a basic 2D rectangular shape labeled as 'plate.' of length l and width w. This sketch defines the base of your cubic object. Next, you define an 'Extrude' operation, or 'Pad,' specifying the distance to push or pull the sketch into a 3D object. This results in a solid cubic form based on the Sketch's shape and the extrusion distance specified.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_PArametricDesignPlate.png&amp;filetimestamp=20240615001146&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_PArametricDesignPlate.png" decoding="async" width="894" height="491" class="mw-file-element" data-file-width="894" data-file-height="491"></a></span>
 </p><p>On the top face of the plate you sketch a circle of a given diameter d. You then use this circle to create a pocket (remove material) from the original plate.
@@ -101,12 +101,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051717
+Cached time: 20260112051730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.066 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.058 seconds
+Real time usage: 0.109 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8504/2097152 bytes
 Template argument size: 858/2097152 bytes
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.086      1 -total
- 64.31%    9.701      1 Template:Manual:TOC
- 42.20%    6.367      1 Manual:Summary/cs
- 16.69%    2.518      2 Template:Docnav
- 14.73%    2.222      2 Template:MenuCommand
+100.00%   16.131      1 -total
+ 51.20%    8.259      1 Template:Manual:TOC
+ 38.79%    6.257      1 Manual:Summary/cs
+ 35.52%    5.730      2 Template:Docnav
+  9.73%    1.570      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112051717 and revision id 1737135. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112051730 and revision id 1737137. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
