Created page with "Pokud se rozhodnete změnit některý z rozměrů desky nebo kruhu, finální objekt se také změní. Díky použití parametrického přístupu k návrhu není nutné objekt vytvářet znovu od začátku."

--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -73,7 +73,7 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_PArametricDesignPlate.png&amp;filetimestamp=20240615001146&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_PArametricDesignPlate.png" decoding="async" width="894" height="491" class="mw-file-element" data-file-width="894" data-file-height="491"></a></span>
 </p><p>Na horn&iacute; stran&#283; desky nakresl&iacute;te kru&#382;nici o dan&eacute;m pr&#367;m&#283;ru d. Tuto kru&#382;nici pak pou&#382;ijete k vytvo&#345;en&iacute; kapsy (odstran&#283;n&iacute; materi&aacute;lu) z p&#367;vodn&iacute; desky
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ParametricDesignPocket.png&amp;filetimestamp=20240615001155&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ParametricDesignPocket.png" decoding="async" width="894" height="491" class="mw-file-element" data-file-width="894" data-file-height="491"></a></span>
-</p><p>If you decide to change either of the dimensions of the plate, or of the circle, the final object would be also modified. Thanks to the use of a parametric design approach, there is no need to redo the object from the beginning.
+</p><p>Pokud se rozhodnete zm&#283;nit n&#283;kter&yacute; z rozm&#283;r&#367; desky nebo kruhu, fin&aacute;ln&iacute; objekt se tak&eacute; zm&#283;n&iacute;. D&iacute;ky pou&#382;it&iacute; parametrick&eacute;ho p&#345;&iacute;stupu k n&aacute;vrhu nen&iacute; nutn&eacute; objekt vytv&aacute;&#345;et znovu od za&#269;&aacute;tku.
 </p>
 <ol><li>Recomputation is not always automatic. Heavy operations, that might modify a big portion of your document, and therefore take some time, are not performed automatically. Instead, the object (and all the objects that depend on it) will be marked for recomputation (a small blue icon appears on them in the tree view). You must then press the recompute button (or <b>Edit-&gt;Refresh</b>) to have all the marked objects recomputed.</li>
 <li>The dependency tree must always flow in the same direction. Loops are forbidden. (See <a href="../Glossary.html#Directed_Acyclic_Graph" title="Glossary">DAG</a>, and <a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>) You can have object A which depends on object B which depends on object C. But you cannot have object A which depends on object B which depends on object A. That would be a circular dependency. However, you can have many objects that depend on the same object, for example, objects B and C both depend on A. Menu <b>Tools -&gt; Dependency graph</b> shows you a dependency diagram like on the image above. It can be useful to detect problems.</li></ol>
@@ -101,12 +101,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112052133
+Cached time: 20260112052141
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.055 seconds
-Real time usage: 0.081 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8504/2097152 bytes
 Template argument size: 858/2097152 bytes
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.100      1 -total
- 66.94%    6.761      1 Template:Manual:TOC
- 55.59%    5.615      1 Manual:Summary/cs
- 17.36%    1.753      2 Template:Docnav
- 12.31%    1.243      2 Template:MenuCommand
+100.00%   13.642      1 -total
+ 62.70%    8.554      1 Template:Manual:TOC
+ 45.91%    6.263      1 Manual:Summary/cs
+ 22.61%    3.084      2 Template:Docnav
+  9.96%    1.359      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052133 and revision id 1737143. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052141 and revision id 1737146. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
